--- a/MyDbtDiaryCard/MyDbtDiaryCard/App.xaml
+++ b/MyDbtDiaryCard/MyDbtDiaryCard/App.xaml
@@ -47,7 +47,8 @@
                 <Setter.Value>
                     <FontImageSource FontFamily="FAS"
                          Glyph="{x:Static icons:FontAwesomeIcons.ArrowLeft}"
-                         Size="Large" Color="{StaticResource TheLightestColor}"/>
+                         Color="{StaticResource TitleTextColor}"
+                         Size="Large"/>
                 </Setter.Value>
             </Setter>
         </Style>
