--- a/MyDbtDiaryCard/MyDbtDiaryCard/Views/DayEntryPage.xaml
+++ b/MyDbtDiaryCard/MyDbtDiaryCard/Views/DayEntryPage.xaml
@@ -39,6 +39,7 @@
 
             <Button Grid.Column="2"
                     Command="{Binding GetNextDayCommand}"
+                    CommandParameter="{Binding PickedDate}"
                     Style="{StaticResource BtnToolBar}"
                     Text="->"/>
         </Grid>
