add Usefulness Help popup

--- a/MyDbtDiaryCard/MyDbtDiaryCard/Views/TableOverviewPage.xaml
+++ b/MyDbtDiaryCard/MyDbtDiaryCard/Views/TableOverviewPage.xaml
@@ -386,6 +386,7 @@
                                     <Label Text="{x:Static resx:EntryResources.Skills}"
                                            Style="{StaticResource ColumnHeader}"/>
                                     <Button BackgroundColor="#B3E5FC"
+                                            Command="{Binding ShowUsefulnessHelpCommand}"
                                             Style="{StaticResource BtnHelp}"
                                             VerticalOptions="Center"/>
                                 </StackLayout>
